[Frontend] Fix for scrollbar flicker
#748
Was able to observe problem in Mac
Chrome. Moved body, html overflow: hidden
into startup-base.scss and change seems
to have fixed the problem;

--- a/platform/commonUI/general/res/sass/_global.scss
+++ b/platform/commonUI/general/res/sass/_global.scss
@@ -53,7 +53,6 @@ body, html {
 	font-weight: 200;
 	height: 100%;
 	width: 100%;
-	overflow: hidden;
 }
 
 em {
